--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="project"><font color="#FFFFFF">Project</font></string>
+    <string name="actions"><font color="#FFFFFF">Actions</font></string>
 </resources>
